fix alignment

--- a/Module35/Multi-Page-website/style.css
+++ b/Module35/Multi-Page-website/style.css
@@ -2,8 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    /* width: 100%; */
-    /* height: 100%; */
+    font-family: "IBM Plex Sans", sans-serif;
 }
 body{
     width: 80%;
@@ -26,9 +25,9 @@ body{
 }
 .nav-links ul a{
     text-decoration: none;
-    /* color: #20bc7e; */
     color: black;
     font-weight: 600;
+    font-size: 18px;
 }
 .nav-links ul a:hover{
     text-decoration: underline;
@@ -40,17 +39,19 @@ body{
     height: 100%;
     padding: 60px 10px;
     align-items: center;
+    justify-content: center;
+    gap: 10px;
 }
 .hero-section>.left-content{
     display: flex;
     flex-direction: column;
     width: 40%;
-    height: 40px;
+    height: 100%;
     gap: 15px;
-    margin-top: 40px;
+    margin-top: 20px;
 }
 .hero-section>.left-content>h1{
-    font-size: 50px;
+    font-size: 42px;
     font-weight: 900;
 }
 .hero-section>.left-content>p{
@@ -58,13 +59,13 @@ body{
 }
 .hero-section>.left-content>button{
     width: fit-content;
-    padding: 7px 20px;
+    padding: 10px 23px;
     border-radius: 20px;
     color: white;
     background-color: #20bc7e;
     border: #20bc7e;
     font-weight: 600;
-    font-size: 14px;
+    font-size: 16px;
 }
 .hero-section>.left-content>#img1 {
     height: 18px;
@@ -81,45 +82,40 @@ body{
     z-index: -1;
     height: 400px;
     width: 400px;
-    bottom: 8%;
-    left: 29%;
+    bottom: 10%;
+    left: 30%;
     
 }
 .hero-section>.right-content{
     width: 60%;
-    height: 40px;
+    height: 100%;
     position: relative;
+    margin-left: 30px;
 }
 .hero-section>.right-content>#greenBox{
     position: absolute;
     z-index: 1;
-    width: 350px;
-    height: 200px;
-    top: 70px;
-    left: 35%;
-    right: 0;
+    width: 310px;
+    height: 280px;
+    top: -100px;
+    left: 42%;
     /* width: 35%; */
     bottom: 30px;
 }
 .hero-section>.right-content>#yellowBox{
     position: absolute;
     z-index: 2;
-    /* width: 150px; */
-    height: 150px;
-    top: 160px; 
-    left: 63%;
-    right: 0;
-    width: 30%;
-    bottom: 50px;
+    width: 155px;
+    height: 190px;
+    top: -10px; 
+    left: 75%;
 }
 .hero-section>.right-content>#doctor{
     position: absolute;
     z-index: 3;
-    height: 420px;
-    width: 420px;
-    top: -90px;
-    left: 30%;
+    height: 480px;
+    width: 380px;
+    top: -270px;
+    left: 36%;
     position: absolute;
-    right: 0;
-    bottom: 0;
 }
